portfolio section upgrade

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -6,6 +6,8 @@
 header {
   padding: 256px 0 200px;
   background-color: rgb(129, 129, 129);
+  background-image: url("/images/computercodebw.png"); 
+  
 }
 
 section {
