even more path work

--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -6,7 +6,7 @@
 header {
   padding: 256px 0 200px;
   background-color: rgb(129, 129, 129);
-  background-image: url("images/computercodebw.png"); 
+  background-image: url("/images/computercodebw.png"); 
   
 }
 
