--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -4,9 +4,9 @@
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-scrolling-nav/blob/master/LICENSE)
  */
 header {
-  padding: 256px 0 200px;
+  padding: 256px 0 250px;
   background-color: rgb(129, 129, 129);
-  background-image: url("/images/computercodebw.png"); 
+  background-image: url("../images/computercodebw.png"); 
   
 }
 
