--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -17,3 +17,11 @@ section {
 body{
   background-color: rgb(218, 218, 218);
 }
+
+.heading{
+  text-align: center;
+}
+
+.links{
+  font-size: 25px;
+}
